--- a/index.html
+++ b/index.html
@@ -5,9 +5,39 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/scripts.js"></script>
-    <title></title>
+    <title>Favorite Things</title>
   </head>
   <body>
+    <div class="container">
+      <h1>What are you favorite things:</h1>
+      <div>
+        <form id="arrayForm">
+          <div class="form-group">
+            <label for="food">Favorite food:</label>
+            <input id="food" class="form-control" type="text">
+          </div>
+          <div class="form-group">
+            <label for="book">Favorite book:</label>
+            <input id="book" class="form-control" type="text">
+          </div>
+          <div class="form-group">
+            <label for="color">Favorite color:</label>
+            <input id="color" class="form-control" type="text">
+          </div>
+          <div class="form-group">
+            <label for="animal">Favorite animal:</label>
+            <input id="animal" class="form-control" type="text">
+          </div>
+          <div class="form-group">
+            <label for="language">Favorite programming language:</label>
+            <input id = "language" class="form-control" type="text">
+          </div>
+
+        </form>
+
+      </div>
+
+    </div>
 
   </body>
 </html>
