--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>What are you favorite things:</h1>
+      <h1>What are your favorite things:</h1>
       <div>
         <form id="arrayForm">
           <div class="form-group">
@@ -32,7 +32,7 @@
             <label for="language">Favorite programming language:</label>
             <input id = "language" class="form-control" type="text">
           </div>
-
+          <button type="submit" class="btn btn-primary">Submit</button>
         </form>
 
       </div>
