implement js to return list of 3 favorite things

--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
-
+        <div id="result">
+          <ul id="list">
+          
+          </ul>
+        </div>
       </div>
 
     </div>
